# oj_backend/models/init.go
@@ -1,12 +1,19 @@
 package models
 
 import (
+	"github.com/go-redis/redis/v8"
 	"gorm.io/driver/mysql"
 	"gorm.io/gorm"
 	"log"
 )
 
 var DB *gorm.DB = Init()
+
+var RDB = redis.NewClient(&redis.Options{
+	Addr:     "localhost:6379",
+	Password: "", // no password set
+	DB:       0,  // use default DB
+})
 
 func Init() *gorm.DB {
 	dsn := "root:@tcp(127.0.0.1:3306)/oj?charset=utf8mb4&parseTime=True&loc=Local"
