# oj_backend/router/app.go
@@ -16,6 +16,7 @@ func Router() *gin.Engine {
 	r.GET("/user-detail", service.GetUserDetail)
 	r.POST("/login", service.Login)
 	r.POST("/send-code", service.SendCode)
+	r.POST("/register", service.Register)
 
 	r.GET("/submit-list", service.GetSubmitList)
 
